# models/product.js
@@ -7,6 +7,11 @@ module.exports = (sequelize, DataTypes) => {
     }
   }
   Product.init({
+    code: {
+      type: DataTypes.STRING,
+      allowNull: false,
+      unique: true
+    },
     name: {
       type: DataTypes.STRING,
       allowNull: true,
@@ -27,6 +32,15 @@ module.exports = (sequelize, DataTypes) => {
       },
       onUpdate: 'CASCADE',
       onDelete: 'CASCADE',
+    },
+    image: {
+      type: DataTypes.STRING, 
+      allowNull: true,
+    },
+    stock: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      defaultValue: 0, 
     },
   }, {
     sequelize,
